kubernetes/istio/04/demos/demo2/reviews-deny-all.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: reviews-authz
  namespace: default
spec:  
  selector:
    matchLabels:
      app: reviews
